--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
@@ -13,12 +13,16 @@
 		<link rel="stylesheet" href="${staticDomain}/family/css/family.css">
 	#elseif(${family_module} == "ufb")
 		<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
-    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css">
     	#if(${family_page} == "ufb_index")
     		<link rel="stylesheet" href="${staticDomain}/family/css/main.css">
+    	#else
+    		<link rel="stylesheet" href="${staticDomain}/family/css/common.css">
     	#end
-	#else
+	#elseif(${family_module} == "setting")
 		<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
+    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css">
+    #else
+    	<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
     	<link rel="stylesheet" href="${staticDomain}/family/css/common.css">
     	<link rel="stylesheet" href="${staticDomain}/family/css/main.css">
 	#end
