--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_passwd.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_passwd.vm
@@ -1,98 +1,12 @@
 <!DOCTYPE html>
 <head>
-    <title>幼富通</title>
-</head>
-<body>
- 
-        <div id="body">
-            <div class="container">
-                <div class="u2 mt20">
-                    <div class="a4">
-                       <ul class="v1">
-                            <li>创建账户</li>
-                            <li class="v1_hover">身份安全信息</li>
-                            <li>设置支付方式</li>
-                            <li>成功</li>
-                        </ul>
-                       <div class="v2">
-                            <i class="v2_1"></i>
-                            <p>你正在访问幼富通安全网址，请放心操作。幼富通致力于为全国幼教机构打造安全、稳定、便捷的互联网金融服务平台。为了保障你的机构和广大幼儿家庭用户的合法权益，请认真填写以下机构登记信息，我们会严格保密相关隐私信息。</p>
-                       </div>
-                    <div class="b3">
-                        <form id="subform" class="common-form" method="post" action="../family/createAccount3.htm" >
-							<input type="hidden" name="mobileno" id="mobileno" value="$!{CustinfoVo.mobileno}" />
-                            <div class="panel">
-                                <ul class="safeInfo">
-                                    <li class="anotherArea">
-                                        <span class="form-title title-font">设置<label>登录密码</label></span>
-                                     <p>登录时需验证，保护账户信息</p>
-                                    </li>
-                                    <li>
-                                        <span class="form-title">登录密码</span>
-                                        <input class="ipt-password1 input-text" type="password" name="loginpwd" id="loginpwd" value="$!{CustinfoVo.loginpwd}">
-                                        <span class="tips-normal" style="display: block;">#if(${CustinfoVo.loginpwd}) #else 6-20个大小写英文字母、符号或数字 #end</span>
-                              <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd_family}</span>
-                                    </li>
-                                    <li #if($errMsg_pswpwd2_family)class="error" #end>
-                                        <span class="form-title">重复输入</span>
-                                        <input class="ipt-password2 input-text" type="password" name="loginpwd2" id="loginpwd2" value="$!{CustinfoVo.loginpwd2}">
-                                        <span class="tips-normal" style="display: block;">#if(${CustinfoVo.loginpwd2}) #else 请再次输入密码 #end</span>
-                                      <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd2_family}</span>
-                                    </li>
-                                </ul>
-                                <ul class="safeInfo">
-                                    <li class="anotherArea">
-                                        <span class="form-title title-font">设置<label>交易密码</label></span>
-                                     <p>涉及资金交易或账户信息修改时输入，不能于登录密码相同</p>
-                                    </li>
-                                    <li>
-                                        <span class="form-title">交易密码</span>
-                                        <input class="ipt-tradepwd input-text" type="password"  name="tradepwd" id="tradepwd" value="$!{CustinfoVo.tradepwd}">
-                                        <span class="tips-normal" style="display: block;">#if(${CustinfoVo.tradepwd}) #else 6-20个大小写英文字母、符号或数字 #end </span>
-                                      <span class="tips-check"><i class="icon"></i>$!{errmsg_tradepwd_family}</span>
-                                    </li>
-                                    <li #if(${errMsg_tradepwd2_family}) class="error" #end>
-                                        <span class="form-title">重复输入</span>
-                                        <input class="ipt-tradepwd2 input-text" type="password"  name="tradepwd2" id="tradepwd2" value="$!{CustinfoVo.tradepwd2}">
-                                        <span class="tips-normal" style="display: block;">#if(${CustinfoVo.tradepwd2}) #else 请再次输入密码 #end </span>
-                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_tradepwd2_family}</span>
-                                    </li>
-                                </ul>
-                                 <ul class="safeInfo borderNone">
-                                    <li class="anotherArea">
-                                        <span class="form-title title-font">确认家长身份</span>
-                                     <p>请务必准确填写本人身份信息，注册后不能更改，隐私信息严格保密</p>
-                                    </li>
-                                    <li>
-                                        <span class="form-title">家长姓名</span>
-                                        <input class="ipt-invnm input-text" type="text" name="invnm" id="invnm" value="$!{CustinfoVo.invnm}" >
-                                        <span class="tips-normal" style="display: block;">#if(${CustinfoVo.invnm}) #else 请填写家长姓名 #end </span>
-                                        <span class="tips-check"><i class="icon">$!{errMsg_invnm_family}</i></span>
-                                    </li>
-                                    <li #if($errMsg_idno_family) class="error" #end>
-                                        <span class="form-title">身份证号码</span>
-                                        <input class="ipt-idCard input-text" type="text" name="idno" id="idno" maxlength="18" value="$!{CustinfoVo.idno}">
-                                        <span class="tips-normal" style="display: block;">#if(${CustinfoVo.idno}) #else 请填写身份证号码 #end </span>
-                                         <span class="tips-check"><i class="icon">$!{errMsg_idno_family}</i></span>
-                                    </li>
-                                    <li>
-                                        <input id="btn-subbutton" class="input-button" type="button" value="下一步">                 
-                                    </li>
-                                </ul>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-          </div>
-        </div>
-    </div>
- 
-<script type="text/javascript" src="${staticDomain}/static/family/scripts/load.js"></script>
-<script type="text/javascript" src="${staticDomain}/static/family/scripts/register.js"></script>    
+<title>幼富通-注册-身份安全信息</title>
+<script type="text/javascript" src="${staticDomain}/family/scripts/load.js"></script>
+<script type="text/javascript" src="${staticDomain}/family/scripts/family-common.js"></script>
 <script >
-  $(function(){
-	  $("#btn-subbutton").on("click",function(){
+$(function(){
+
+	$("#btn-subbutton").on("click",function(){
 	 
 		if(!check_pwd1($(".ipt-password1"))){
 			return false;
@@ -113,10 +27,116 @@
 		//	return false;
 		}
 		  $("#subform").submit();
-	  })
-	  
-  })
+	});
+	
+	// 登录密码
+	$('#loginpwd').on('blur', function(){
+		var errorMsg = '';
+		if($(this).val()!= '' && (errorMsg = check_pwd1($(this).val())) != ''){
+			$(this).siblings('.tips-check').find('font').text(errorMsg);
+			$(this).siblings('.tips-check').css('display', 'inline');
+			$(this).parent().addClass('error');
+		}
+	})
+	
+	// 用户输入时，取消错误提示
+	$("form input").on('focus', function(){
+		$(this).closest('ul').find('li').each(function(){
+			if($(this).hasClass('error')){
+				$(this).removeClass('error');
+				$(this).find('.tips-check').hide();
+			}
+		});
+	});
+   
+})
  
 </script>
+</head>
+<body>
+ 
+<div id="body">
+    <div class="container">
+        <div class="u2 mt20">
+            <div class="a4">
+               <ul class="v1">
+                    <li>创建账户</li>
+                    <li class="v1_hover">身份安全信息</li>
+                    <li>设置支付方式</li>
+                    <li>成功</li>
+                </ul>
+               <div class="v2">
+                    <i class="v2_1"></i>
+                    <p>你正在访问幼富通安全网址，请放心操作。幼富通致力于为全国幼教机构打造安全、稳定、便捷的互联网金融服务平台。为了保障你的机构和广大幼儿家庭用户的合法权益，请认真填写以下机构登记信息，我们会严格保密相关隐私信息。</p>
+               </div>
+                <div class="b3">
+                    <form id="subform" class="common-form" method="post" action="../family/createAccount3.htm" >
+						<input type="hidden" name="mobileno" id="mobileno" value="$!{CustinfoVo.mobileno}" />
+                        <div class="panel">
+                            <ul class="safeInfo">
+                                <li class="anotherArea">
+                                    <span class="form-title title-font">设置<label>登录密码</label></span>
+                                 <p>登录时需验证，保护账户信息</p>
+                                </li>
+                                <li>
+                                    <span class="form-title">登录密码</span>
+                                    <input class="ipt-password1 input-text" type="password" name="loginpwd" id="loginpwd" value="$!{CustinfoVo.loginpwd}">
+                                    <span class="tips-normal" style="display: block;">#if(${CustinfoVo.loginpwd}) #else 6-20个大小写英文字母、符号或数字 #end</span>
+                          <span class="tips-check"><i class="icon"></i><font></font></span>
+                                </li>
+                                <li #if($errMsg_pswpwd2_family)class="error" #end>
+                                    <span class="form-title">重复输入</span>
+                                    <input class="ipt-password2 input-text" type="password" name="loginpwd2" id="loginpwd2" value="$!{CustinfoVo.loginpwd2}">
+                                    <span class="tips-normal" style="display: block;">#if(${CustinfoVo.loginpwd2}) #else 请再次输入密码 #end</span>
+                                  <span class="tips-check"><i class="icon"></i><font></font></span>
+                                </li>
+                            </ul>
+                            <ul class="safeInfo">
+                                <li class="anotherArea">
+                                    <span class="form-title title-font">设置<label>交易密码</label></span>
+                                 <p>涉及资金交易或账户信息修改时输入，不能于登录密码相同</p>
+                                </li>
+                                <li>
+                                    <span class="form-title">交易密码</span>
+                                    <input class="ipt-tradepwd input-text" type="password"  name="tradepwd" id="tradepwd" value="$!{CustinfoVo.tradepwd}">
+                                    <span class="tips-normal" style="display: block;">#if(${CustinfoVo.tradepwd}) #else 6-20个大小写英文字母、符号或数字 #end </span>
+                                  <span class="tips-check"><i class="icon"></i><font></font></span>
+                                </li>
+                                <li #if(${errMsg_tradepwd2_family}) class="error" #end>
+                                    <span class="form-title">重复输入</span>
+                                    <input class="ipt-tradepwd2 input-text" type="password"  name="tradepwd2" id="tradepwd2" value="$!{CustinfoVo.tradepwd2}">
+                                    <span class="tips-normal" style="display: block;">#if(${CustinfoVo.tradepwd2}) #else 请再次输入密码 #end </span>
+                                 <span class="tips-check"><i class="icon"></i><font></font></span>
+                                </li>
+                            </ul>
+                             <ul class="safeInfo borderNone">
+                                <li class="anotherArea">
+                                    <span class="form-title title-font">确认家长身份</span>
+                                 <p>请务必准确填写本人身份信息，注册后不能更改，隐私信息严格保密</p>
+                                </li>
+                                <li>
+                                    <span class="form-title">家长姓名</span>
+                                    <input class="ipt-invnm input-text" type="text" name="invnm" id="invnm" value="$!{CustinfoVo.invnm}" >
+                                    <span class="tips-normal" style="display: block;">#if(${CustinfoVo.invnm}) #else 请填写家长姓名 #end </span>
+                                    <span class="tips-check"><i class="icon"><font></font></i></span>
+                                </li>
+                                <li #if($errMsg_idno_family) class="error" #end>
+                                    <span class="form-title">身份证号码</span>
+                                    <input class="ipt-idCard input-text" type="text" name="idno" id="idno" maxlength="18" value="$!{CustinfoVo.idno}">
+                                    <span class="tips-normal" style="display: block;">#if(${CustinfoVo.idno}) #else 请填写身份证号码 #end </span>
+                                     <span class="tips-check"><i class="icon"><font></font></i></span>
+                                </li>
+                                <li>
+                                    <input id="btn-subbutton" class="input-button" type="button" value="下一步">                 
+                                </li>
+                            </ul>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+      </div>
+    </div>
+</div>
 </body>
 </html>
