--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
@@ -161,7 +161,7 @@ $(function(){
     			return false;
     		} 
 		 }
-		window.location.href="${ufbDomain}/family/card_update.htm";
+		window.location.href="${ufbDomain}/family/ufb/card_adds.htm";
 	});
 	
 	$("#showYield").html("7日年化收益率（%)"+ parseFloat('${hftFundInfo.yield}').toFixed(4)+"");
